# RAPO

./: .gitignore  pyproject.toml
.akydev/: changes.json  patch.diff  project.json  prompt.txt  response.md
.akydev/tasks/: task-0001.json  task-0002.json
prompts/: 00_PROJECT_CONTEXT.md  01_COPILOT_RULES.md  02_FEATURE_TEMPLATE.md  03_REVIEW_CHECKLIST.md  04_SECURITY_GUIDELINES.md  05_REPORTING_STANDARD.md  06_UI_STYLE_GUIDE.md  07_AI_BEHAVIOR.md  08_ARCHITECTURE_RULES.md  09_MODULE_TEMPLATE.md  10_GIT_WORKFLOW.md  COPILOT_RULES.md  FEATURE_TEMPLATE.md  README.md  REVIEW_CHECKLIST.md
src/fundamentals/lesson01_numpy/: numpy_speed.py
src/fundamentals/lesson02_pytorch/: autograd.py  tensor_creation.py  tensor_operations.py  tensor_reshape.py  tensors.py
src/fundamentals/lesson03_neural_networks/: activation_functions.py  linear_layer.py  loss_functions.py  manual_activation.py  manual_linear_layer.py  optimizer.py  simple_network.py
src/rapo/config/: settings.py
src/rapo/core/: logger.py  main.py  output.py  router.py
src/rapo/tools/: common_files.py  cookies.py  dns.py  dns_lookup.py  http.py  http_methods.py  ports.py  recon.py  robots.py  scanner.py  security_headers.py  sitemap.py  ssl.py  tech.py  validator.py  waf.py  whois.py
src/rapo/tools/probes/: http.py  http_v2.py
